--- a/public/games/index.html
+++ b/public/games/index.html
@@ -20,9 +20,9 @@
         <a href="#">
             <button class="nav-button">Settings</button>
         </a>
-        <a href="#">
-            <button class="nav-button">Proxy</button>
-        </a>
+        <a href="/search.html">
+          <button class="nav-button">Proxy</button>
+      </a>
     </nav>
 
     <div class="search-container">
