--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
         <a href="#">
             <button class="nav-button">Settings</button>
         </a>
-        <a href="#">
+        <a href="/search.html">
             <button class="nav-button">Proxy</button>
         </a>
     </nav>
