--- a/public/player/index.html
+++ b/public/player/index.html
@@ -19,9 +19,9 @@
     <a href="#">
       <button class="nav-button">Settings</button>
     </a>
-    <a href="#">
+    <a href="/search.html">
       <button class="nav-button">Proxy</button>
-    </a>
+  </a>
   </nav>
 
   <main>
