--- a/public/search.html
+++ b/public/search.html
@@ -3,10 +3,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <link rel="stylesheet" href="/public/search.css">
+    <link rel="stylesheet" href="/search.css">
   </head>
   <body>
-    
+
     <nav class="navbar">
       <a href="/index.html">
           <button class="nav-button">Home</button>
@@ -17,7 +17,7 @@
       <a href="#">
           <button class="nav-button">Settings</button>
       </a>
-      <a href="#">
+      <a href="/search.html">
           <button class="nav-button">Proxy</button>
       </a>
   </nav>
