--- a/public/search.html
+++ b/public/search.html
@@ -34,6 +34,9 @@
       <button onclick="loadPage('https://youtube.com/')" class="shortcut" title="shortcut">
         <p>YouTube</p>
       </button>
+      <button onclick="loadPage('https://now.gg/apps/roblox-corporation/5349/roblox.html')" class="shortcut" title="shortcut">
+        <p>Roblox</p>
+      </button>
       <button onclick="loadPage('https://discord.com/')" class="shortcut" title="shortcut">
         <p>Discord</p>
       </button>
