--- a/public/games/index.html
+++ b/public/games/index.html
@@ -10,20 +10,20 @@
  </head>
  <body>
 
-    <nav class="navbar">
-        <a href="/index.html">
-            <button class="nav-button">Home</button>
-        </a>
-        <a href="/games/index.html">
-            <button class="nav-button">Games</button>
-        </a>
-        <a href="#">
-            <button class="nav-button">Settings</button>
-        </a>
-        <a href="/search.html">
-          <button class="nav-button">Proxy</button>
-      </a>
-    </nav>
+  <nav class="navbar">
+    <a href="/index.html">
+        <button class="nav-button">Home</button>
+    </a>
+    <a href="/games/index.html">
+        <button class="nav-button">Games</button>
+    </a>
+    <a href="/settings/settings.html">
+        <button class="nav-button">Settings</button>
+    </a>
+    <a href="/search.html">
+        <button class="nav-button">Proxy</button>
+    </a>
+</nav>
 
     <div class="search-container">
       <input type="text" id="searchBar" oninput="filterGames()">
@@ -1213,5 +1213,6 @@
     </main>
 
     <script src="/games/script.js"></script>
+    <script src="/aboutblank.js"></script>
 </body>
 </html>
