--- a/public/player/index.html
+++ b/public/player/index.html
@@ -11,18 +11,18 @@
   
   <nav class="navbar">
     <a href="/index.html">
-      <button class="nav-button">Home</button>
+        <button class="nav-button">Home</button>
     </a>
     <a href="/games/index.html">
-      <button class="nav-button">Games</button>
+        <button class="nav-button">Games</button>
     </a>
-    <a href="#">
-      <button class="nav-button">Settings</button>
+    <a href="/settings/settings.html">
+        <button class="nav-button">Settings</button>
     </a>
     <a href="/search.html">
-      <button class="nav-button">Proxy</button>
-  </a>
-  </nav>
+        <button class="nav-button">Proxy</button>
+    </a>
+</nav>
 
   <main>
     <div class="iframe-container">
@@ -384,5 +384,7 @@
 
   </script>
 
+  <script src="/aboutblank.js"></script>
+  
 </body>
 </html>
