--- a/public/search.html
+++ b/public/search.html
@@ -14,7 +14,7 @@
       <a href="/games/index.html">
           <button class="nav-button">Games</button>
       </a>
-      <a href="#">
+      <a href="/settings/settings.html">
           <button class="nav-button">Settings</button>
       </a>
       <a href="/search.html">
