--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
         <a href="/games/index.html">
             <button class="nav-button">Games</button>
         </a>
-        <a href="#">
+        <a href="/settings/settings.html">
             <button class="nav-button">Settings</button>
         </a>
         <a href="/search.html">
@@ -43,5 +43,6 @@
     </footer>
 
     <script src="/script.js"></script>
+    <script src="/aboutblank.js"></script>
  </body>
  </html>
