--- a/public/games/index.html
+++ b/public/games/index.html
@@ -837,6 +837,10 @@
                 <img src="/projects/polybranch/img/pic1.png">
                 <span>Poly branch</span>
               </div>
+              <div class="box"onclick="openGame('polytrack')">
+                <img src="/projects/polytrack/image.jpg">
+                <span>Poly track</span>
+              </div>
               <div class="box"onclick="openGame('poor-bunny')">
                 <img src="/Imgs/icons/poorbunny.avif">
                 <span>Poor bunny</span>
