--- a/public/player/index.html
+++ b/public/player/index.html
@@ -361,6 +361,7 @@
         'unicycle-hero': '/projects/unicycle-hero/index.html',
         'unicycle-legend': '/projects/unicycle-legend/index.html',
         'yohoho-io': '/projects/yohoho-io/index.html',
+        'polytrack': '/projects/polytrack/index.html',
       };
 
       // Get the corresponding game file, defaulting to a fallback if not found
