--- a/public/player/index.html
+++ b/public/player/index.html
@@ -9,20 +9,15 @@
 </head>
 <body>
   
-  <nav class="navbar">
-    <a href="/index.html">
-        <button class="nav-button">Home</button>
-    </a>
-    <a href="/games/index.html">
-        <button class="nav-button">Games</button>
-    </a>
-    <a href="/settings/settings.html">
-        <button class="nav-button">Settings</button>
-    </a>
-    <a href="/search.html">
-        <button class="nav-button">Proxy</button>
-    </a>
-</nav>
+  <div class="container">
+    <div class="sidebar">
+        <img src="/Imgs/home.png">
+        <img src="/Imgs/games.png">
+        <img src="/Imgs/settings.png">
+        <img src="/Imgs/Favorite.png">
+        <img src="/Imgs/Prox.png">
+    </div>
+  </div>
 
   <main>
     <div class="iframe-container">
@@ -361,7 +356,6 @@
         'unicycle-hero': '/projects/unicycle-hero/index.html',
         'unicycle-legend': '/projects/unicycle-legend/index.html',
         'yohoho-io': '/projects/yohoho-io/index.html',
-        'polytrack': '/projects/polytrack/index.html',
       };
 
       // Get the corresponding game file, defaulting to a fallback if not found
@@ -385,7 +379,5 @@
 
   </script>
 
-  <script src="/aboutblank.js"></script>
-  
 </body>
 </html>
