--- a/public/index.html
+++ b/public/index.html
@@ -10,39 +10,28 @@
  </head>
  <body>
 
-    <nav class="navbar">
-        <a href="/index.html">
-            <button class="nav-button">Home</button>
-        </a>
-        <a href="/games/index.html">
-            <button class="nav-button">Games</button>
-        </a>
-        <a href="/settings/settings.html">
-            <button class="nav-button">Settings</button>
-        </a>
-        <a href="/search.html">
-            <button class="nav-button">Proxy</button>
-        </a>
-    </nav>
-
-    <h1 id="randomPrompt"></h1>
+    <div class="container">
+        <div class="sidebar">
+            <img src="/Imgs/home.png">
+            <img src="/Imgs/games.png">
+            <img src="/Imgs/settings.png">
+            <img src="/Imgs/Favorite.png">
+            <img src="/Imgs/Prox.png">
+        </div>
+    </div>
 
     <main>
-        <div class="EnterBtn" onclick="navigateToNewPage()">
-            <h1>Enter</h1>
+        <h1>Comet Games</h1>
+        <h6>Join our discord</h3>
+        <a id="enter">
+            <p onclick="navigateToNewPage()">continue</p>
+        </a>
+        <div class="links">
+            <img href="https://discord.gg/BPK6XAsVrV" src="/Imgs/discord.png" alt="discord" class="btn">
+            <img href="https://www.youtube.com/@Mcsmurry" src="/Imgs/youtube.png" alt="youtube" class="btn">
         </div>
     </main>
 
-    <footer>
-        <div class="footer-container">
-            <p>&copy; 2024 Comet Games. All Rights Reserved.</p>
-            <a href="https://discord.gg/BPK6XAsVrV" target="_blank" class="discord-btn">
-                <img src="/Imgs/discord.png" alt="Discord" class="discord-logo">
-            </a>
-        </div>
-    </footer>
-
     <script src="/script.js"></script>
-    <script src="/aboutblank.js"></script>
  </body>
  </html>
