--- a/public/player/index.html
+++ b/public/player/index.html
@@ -11,13 +11,13 @@
   
   <div class="container">
     <div class="sidebar">
-        <img src="/Imgs/home.png">
-        <img src="/Imgs/games.png">
-        <img src="/Imgs/settings.png">
-        <img src="/Imgs/Favorite.png">
-        <img src="/Imgs/Prox.png">
+        <img src="/Imgs/home.png" href="/index.html">
+        <img src="/Imgs/games.png" href="/games/index.html">
+        <img src="/Imgs/settings.png" href="/settings/settings.html">
+        <img src="/Imgs/Favorite.png" href="">
+        <img src="/Imgs/incog.png" href="/search.html">
     </div>
-  </div>
+</div>
 
   <main>
     <div class="iframe-container">
