--- a/public/games/index.html
+++ b/public/games/index.html
@@ -12,13 +12,13 @@
 
   <div class="container">
     <div class="sidebar">
-        <img src="/Imgs/home.png" href="/index.html">
-        <img src="/Imgs/games.png" href="/games/index.html">
-        <img src="/Imgs/settings.png" href="/settings/settings.html">
-        <img src="/Imgs/Favorite.png" href="">
-        <img src="/Imgs/incog.png" href="/search.html">
+        <img src="/Imgs/home.png" onclick="home()">
+        <img src="/Imgs/games.png" onclick="games()">
+        <img src="/Imgs/settings.png" onclick="settings()">
+        <img src="/Imgs/Favorite.png" onclick="fav()">
+        <img src="/Imgs/incog.png" onclick="prox()">
     </div>
-</div>
+  </div>
 
     <div class="search-container">
       <input type="text" id="searchBar" oninput="filterGames()">
