--- a/public/player/index.html
+++ b/public/player/index.html
@@ -11,11 +11,11 @@
   
   <div class="container">
     <div class="sidebar">
-        <img src="/Imgs/home.png" onclick="home()">
-        <img src="/Imgs/games.png" onclick="games()">
-        <img src="/Imgs/settings.png" onclick="settings()">
-        <img src="/Imgs/Favorite.png" onclick="fav()">
-        <img src="/Imgs/incog.png" onclick="prox()">
+        <a href="/index.html"><img src="/Imgs/home.png"></a>
+        <a href="/games/index.html"><img src="/Imgs/games.png"></a>
+        <a href="/settings/settings.html"><img src="/Imgs/settings.png"></a>
+        <a href="#"><img src="/Imgs/Favorite.png"></a>
+        <a href="/search.html"><img src="/Imgs/incog.png"></a>
     </div>
   </div>
 
