--- a/public/search.html
+++ b/public/search.html
@@ -7,20 +7,15 @@
   </head>
   <body>
 
-    <nav class="navbar">
-      <a href="/index.html">
-          <button class="nav-button">Home</button>
-      </a>
-      <a href="/games/index.html">
-          <button class="nav-button">Games</button>
-      </a>
-      <a href="/settings/settings.html">
-          <button class="nav-button">Settings</button>
-      </a>
-      <a href="/search.html">
-          <button class="nav-button">Proxy</button>
-      </a>
-  </nav>
+    <div class="container">
+      <div class="sidebar">
+          <a href="/index.html"><img src="/Imgs/home.png"></a>
+          <a href="/games/index.html"><img src="/Imgs/games.png"></a>
+          <a href="/settings/settings.html"><img src="/Imgs/settings.png"></a>
+          <a href="#"><img src="/Imgs/Favorite.png"></a>
+          <a href="/search.html"><img src="/Imgs/incog.png"></a>
+      </div>
+    </div>
 
     <form id="uv-form">
       <input id="uv-search-engine" value="https://www.google.com/search?q=%s" type="hidden" />
