--- a/public/settings/settings.html
+++ b/public/settings/settings.html
@@ -12,27 +12,24 @@
  </head>
  <body>
   
-  <nav class="navbar">
-    <a href="/index.html">
-        <button class="nav-button">Home</button>
-    </a>
-    <a href="/games/index.html">
-        <button class="nav-button">Games</button>
-    </a>
-    <a href="/settings/settings.html">
-        <button class="nav-button">Settings</button>
-    </a>
-    <a href="/search.html">
-        <button class="nav-button">Proxy</button>
-    </a>
-</nav>
+  <div class="container">
+    <div class="sidebar">
+        <a href="/index.html"><img src="/Imgs/home.png"></a>
+        <a href="/games/index.html"><img src="/Imgs/games.png"></a>
+        <a href="/settings/settings.html"><img src="/Imgs/settings.png"></a>
+        <a href="#"><img src="/Imgs/Favorite.png"></a>
+        <a href="/search.html"><img src="/Imgs/incog.png"></a>
+    </div>
+  </div>
 
+  <div class="Buttons">
     <h2>about:blank Cloaking</h2>
     <p>about:blank cloaking allows you to hide this site from your tab history. Please enable popups for this to work.</p>
-    <div class="buttons">
+    <div class="btns">
       <button id="enableAboutBlank" onclick="enableAboutBlank()">Enable</button>
       <button id="disableAboutBlank" onclick="disableAboutBlank()">Disable</button>
     </div>
+  </div>
     <script src="/aboutblank.js"></script>
     <script src="settings.js"></script>
  </body>
