--- a/public/games/index.html
+++ b/public/games/index.html
@@ -396,6 +396,10 @@
                 <img src="/Imgs/icons/driftboss.jpg">
                 <span>DriftBoss</span>
               </div>
+              <div class="box"onclick="openGame('drifthunter')">
+                <img src="/projects/drift-hunters/icon.webp">
+                <span>DriftHunter</span>
+              </div>
               <div class="box"onclick="openGame('drive-mad')">
                 <img src="/Imgs/icons/drivemad.jpeg">
                 <span>DriveMad</span>
