--- a/public/player/index.html
+++ b/public/player/index.html
@@ -356,6 +356,7 @@
         'unicycle-hero': '/projects/unicycle-hero/index.html',
         'unicycle-legend': '/projects/unicycle-legend/index.html',
         'yohoho-io': '/projects/yohoho-io/index.html',
+        'drifthunter': '/projects/drift-hunters/index.html',
       };
 
       // Get the corresponding game file, defaulting to a fallback if not found
