--- a/public/settings/settings.html
+++ b/public/settings/settings.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
  <html lang="en">
  <head>
@@ -29,7 +27,13 @@
       <button id="enableAboutBlank" onclick="enableAboutBlank()">Enable</button>
       <button id="disableAboutBlank" onclick="disableAboutBlank()">Disable</button>
     </div>
+    <div class="custom-link">
+      <p>Set a custom replacement link:</p>
+      <input type="text" id="customLinkInput" placeholder="Enter a URL">
+      <button id="saveCustomLink" onclick="saveCustomLink()">Save</button>
+    </div>
   </div>
+  
     <script src="/aboutblank.js"></script>
     <script src="settings.js"></script>
  </body>
